chore: clean codes